Implement launching in the model
Bug: 237442318
Test: VirtualDeviceTableModelTest
Change-Id: Ie131739120b87b19b072031cf3aafbe2bb5ca97d

GitOrigin-RevId: c78e80ac6862bcc8465b1d360828c9c40add6913